<resources>
    <string name="app_name">SYND Smart Queue</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="dashboard">Dashboard</string>
    <string name="feed">News Feed</string>
    <string name="qr">QR Scan</string>
    <string name="user">Profile</string>
    <string name="Branches">Branches Status</string>


    <string name="action_settings">Settings</string>
    <string name="code">Time in Your turn: \n <font size='10'> 35 mins</font></string>
    <string name="price">Current Queue No: \n <font size='10'> 25</font></string>
    <string name="dst_city"><b>Account No.</b>\n<font size='10'>XXXXXX 2434</font></string>
    <string name="src_city"><b>Reg. Time</b>\n<font size='10'>10:45 AM</font></string>
    <string name="date">01&#8211;03&#8211;2018</string>
    <string name="name">Anthony Baptista</string>

    <string name="camera_access_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="camera_permission_not_available">Permission is not available. Requesting camera permission.</string>
    <string name="camera_permission_available">Camera permission is available. Starting preview.</string>
    <string name="camera_permission_granted">Camera permission was granted. Starting preview.</string>
    <string name="camera_permission_denied">Camera permission request was denied.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
